# vision

./: .gitignore  .pre-commit-config.yaml  README.md  main.ipynb  onboarding.md  proposal.md  pyproject.toml  resources.md
imagegen_ar/: imagenet_cosmos_di8x8_dataset.py  train_qwen_imagenet.py  train_qwen_imagenet.yaml
scripts/: download_vaani.py  gemini_api_inference.py  vaani_benchmark.py  vllm_inference.py
siglip_paligemma/: __init__.py  configs.py  data.py  models.py  requirements.txt  train.py
starterprojects/gautijha37/: requirements.txt  siglip_train.ipynb
starterprojects/pshishodia/: get_wikidata.ipynb  min_siglip.py  siglip_attention.py  siglip_tests.py
